--- a/home.html
+++ b/home.html
@@ -48,7 +48,7 @@
                     </p>
                     <p><b>CS 460</b></p>
                     <ol>
-                        <li><a href="#">Homework 1</a></li>
+                        <li><a href="https://lloyh.github.io/CS460-HW1/index">Homework 1</a></li>
 <!--
                         <li><a href="#">Homework 2</a></li>
                         <li><a href="#">Homework 3</a></li>
