--- a/home.html
+++ b/home.html
@@ -48,8 +48,11 @@
                     </p>
                     <p><b>CS 460</b></p>
                     <ol>
-                        <li><a href="https://lloyh.github.io/CS460-HW1/index">Homework 1</a></li>
-<!--
+                        <li>
+                            <a href="CS460/HW1/homework1.html">Homework 1</a>
+                        </li>
+                        
+<!--                    https://lloyh.github.io/CS460-HW1/index
                         <li><a href="#">Homework 2</a></li>
                         <li><a href="#">Homework 3</a></li>
 -->
