Corrected hardcoded url to portfolio home page to be ../../home

--- a/CS460/HW1/homework1.html
+++ b/CS460/HW1/homework1.html
@@ -15,7 +15,7 @@
     <body>
         
         <div class="topnav">
-            <a href="https://lloyh.github.io/home">Portfolio Page</a>            
+            <a href="../../home.html">Portfolio Page</a>            
         </div> 
         
         <div class="row">
