--- a/CS460/HW1/homework1.html
+++ b/CS460/HW1/homework1.html
@@ -33,7 +33,7 @@
             <div class="columnRight">
                 <div style="padding-left:5px" class="col-md-15">
                     <h2>CS 460 Homework 1 Blog</h2>
-                    <p> To access the actual assignment index page click here: <a href="CS460-HW1/index" target="_blank">Homework 1 Presentation</a></p>
+                    <p> To access the actual assignment index page click here: <a href="../../CS460-HW1/index" target="_blank">Homework 1 Presentation</a></p>
                     <p>
                         In this assignment we learned the coding essentials of HTML5, CSS and Bootstrap. We also learned to use Git source control via Git Bash. This is an important skill to learn as it allows multiple software developers to work simultaneously on the same source code. Git also allows to revert changes to the code when needed.
                     </p>
