--- a/CS460/HW2/index.html
+++ b/CS460/HW2/index.html
@@ -16,11 +16,12 @@
     </head>
     <body>
         <center>
+            <br>
             <h1>Monthly Mortgage Payment Calculator</h1>
         
-            <div class="container" id="myCalc" style="padding-left:16px; border-style:groove; border-radius: 20px">
+            <div class="container" id="myCalc" style="padding-left:16px; border-style:groove; border-radius: 20px; background-color: lightgrey">
             <form id="myForm">            
-            <div class="form-group row">
+            <div class="form-group row">                
                 <label for="value" class="col-sm-4 col-form-label">
                     Loan Amount:
                 </label>            
