Updated link to homework 2 blog page.

--- a/home.html
+++ b/home.html
@@ -51,6 +51,9 @@
                         <li>
                             <a href="CS460/HW1/homework1.html">Homework 1</a>
                         </li>
+						<li>
+                            <a href="CS460/HW2/homework2_blog.html">Homework 2</a>
+                        </li>
                         
 <!--                    https://lloyh.github.io/CS460-HW1/index
                         <li><a href="#">Homework 2</a></li>
