Updated homework3 blog to show merging snippets and updated link to homework3 on portfolio page

--- a/home.html
+++ b/home.html
@@ -54,11 +54,11 @@
 						<li>
                             <a href="CS460/HW2/homework2_blog.html">Homework 2</a>
                         </li>
+						<li>
+                            <a href="CS460/HW3/homework3_blog.html">Homework 3</a>
+                        </li>
                         
-<!--                    https://lloyh.github.io/CS460-HW1/index
-                        <li><a href="#">Homework 2</a></li>
-                        <li><a href="#">Homework 3</a></li>
--->
+
                     
                     </ol>                                            
                 </div>
