Added a blog page for this assignment with snippets of code and webpages

--- a/home.html
+++ b/home.html
@@ -57,6 +57,9 @@
 						<li>
                             <a href="CS460/HW3/homework3_blog.html">Homework 3</a>
                         </li>
+						<li>
+                            <a href="CS460/HW4/homework4_blog.html">Homework 4</a>
+                        </li>
                         
 
                     
