Corrected link on Portfolio home page that points to my main repositories on github

--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@
                     
                     <h3>Code Repository</h3>
                     <p>
-                        All the code pertaining to this sequencial set of courses is hosted in a separate repository at the following url: <a href="https://github.com/lloyh">https://bitbucket.org/lloyh/</a> 
+                        All the code pertaining to this sequencial set of courses is hosted in a separate repository at the following url: <a href="https://github.com/lloyh">https://github.com/lloyh</a> 
                     </p>
                     
                     <h3>Assignments</h3>
