--- a/home.html
+++ b/home.html
@@ -60,6 +60,9 @@
 						<li>
                             <a href="CS460/HW4/homework4_blog.html">Homework 4</a>
                         </li>
+						<li>
+                            <a href="CS460/HW5/">Homework 5</a>
+                        </li>
                         
 
                     
