HW8 completed code

--- a/home.html
+++ b/home.html
@@ -63,9 +63,15 @@
 						<li>
                             <a href="CS460/HW5/">Homework 5</a>
                         </li>
-                        
-
-                    
+						<li>
+							<a href="CS460/HW7/">Homework 7</a>
+						</li>
+						<li>
+							<a href="CS460/HW8/">Homework 8</a>
+						</li>
+						<li>
+							<a href="CS460/HW9/">Homework 9</a>
+						</li>
                     </ol>                                            
                 </div>
             </div>            
